--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
-node_modules
-dist
-build
-coverage
+# dependencies
+node_modules/
+
+# Next.js build output
+.next/
+out/
+
+# env files
 .env
+.env.local
+.env.*.local
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS / editor
 .DS_Store
-package-lock.json
+.vscode/
